# OnlineShop

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
additional/: Shop_collection.postman_collection.json
online_shop/: celery.py  settings.py  urls.py
shop_app/: admin.py  backends.py  models.py  serializers.py  tasks.py  urls.py  views.py
shop_app/migrations/: 0001_initial.py  0002_alter_orderinfo_delivery_date.py  0003_user_is_verified.py  0004_user_weekly_discount_notif_required.py  0005_alter_discount_date_expire.py  0006_auto_20220129_1623.py  0007_user_cashback_points.py  0008_alter_user_cashback_points.py  0009_alter_promocode_name.py
